# softdesk2

./: .gitignore  README.md  pyproject.toml
API/: db.sqlite3
API/API/: settings.py  urls.py
API/accounts/: models.py  permissions.py  serializers.py  urls.py  views.py
API/accounts/migrations/: 0001_initial.py  0002_customuser_birthday.py  0003_customuser_uuid.py
API/support/: models.py  permissions.py  serializers.py  urls.py  views.py
API/support/migrations/: 0001_initial.py  0002_rename_name_project_title_remove_issue_contributor_and_more.py  0003_alter_issue_issue_author.py  0004_remove_contributor_user_contributor_users.py  0005_rename_user_comment_comment_author.py  0006_contributor_uuid_issue_uuid_project_uuid.py  0007_comment_uuid.py
